--- a/index.html
+++ b/index.html
@@ -108,31 +108,32 @@
       font-size: 2vw;
     }
 
-    @media (max-width: 600px) {
-      #score, #target, #timer {
-        font-size: 5vw;
-      }
+  @media (max-width: 600px), (max-height: 450px) {
+  #score, #target, #timer {
+    font-size: 4vw;
+  }
 
-      #music-toggle {
-        font-size: 5vw;
-      }
+  #music-toggle {
+    font-size: 4vw;
+  }
 
-      .face {
-        width: 15vw;
-        height: 15vw;
-      }
+  .face {
+    width: 14vw;
+    height: 14vw;
+  }
 
-      #highscore {
-        font-size: 3vw;
-      }
+  #highscore {
+    font-size: 3vw;
+  }
 
-      #gameover-screen {
-        font-size: 5vw;
-      }
+  #gameover-screen {
+    font-size: 4.5vw;
+  }
 
-      #gameover-screen button {
-        font-size: 4vw;
-      }
+  #gameover-screen button {
+    font-size: 3.5vw;
+  }
+}
     }
   </style>
 </head>
