--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     let highscore = parseInt(localStorage.getItem("highscore")) || 0;
 
     const persons = [
-      { name: "Tante Franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
+      { name: "Tante Franni", img: "Frannipic.jpeg", sounds: ["Franni1.mp3", "Franni2.mp3", "Franni3.mp3"] },
       { name: "Onkel Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3", "Philipp5.mp3"] },
       { name: "Mama", img: "Franzipic.jpg", sounds: ["Franzi1.ogg"] },
       { name: "Lutz", img: "Lutzpic.jpg", sounds: ["lutz1.mp3", "lutz2.mp3"] },
