--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       padding: 0;
       overflow: hidden;
       height: 100%;
+      background: black;
     }
 
     body {
@@ -15,15 +16,26 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
+      font-family: sans-serif;
+    }
+
+    #timer {
+      position: fixed;
+      top: 10px;
+      left: 15px;
+      font-size: clamp(16px, 4vw, 36px);
+      background: rgba(255,255,255,0.7);
+      padding: 6px 12px;
+      border-radius: 12px;
+      z-index: 1000;
     }
 
     #score {
       position: fixed;
       top: 10px;
       right: 15px;
-      font-size: 4vw;
-      font-family: sans-serif;
-      background: rgba(255, 255, 255, 0.7);
+      font-size: clamp(16px, 4vw, 36px);
+      background: rgba(255,255,255,0.7);
       padding: 6px 12px;
       border-radius: 12px;
       z-index: 1000;
@@ -34,43 +46,20 @@
       top: 10px;
       left: 50%;
       transform: translateX(-50%);
-      font-size: 4vw;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 6px 12px;
-      border-radius: 12px;
-      font-family: sans-serif;
       z-index: 1000;
     }
 
-    #timer {
-      position: fixed;
-      top: 10px;
-      left: 15px;
-      font-size: 4vw;
-      font-family: sans-serif;
-      background: rgba(255, 255, 255, 0.7);
-      padding: 6px 12px;
-      border-radius: 12px;
-      z-index: 1000;
-    }
-
-    #music-toggle {
-      position: fixed;
-      top: 70px;
-      left: 15px;
-      font-size: 3.5vw;
-      background: rgba(255, 255, 255, 0.7);
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      z-index: 1000;
-      padding: 4px 10px;
+    #target img {
+      width: clamp(50px, 10vw, 100px);
+      height: clamp(50px, 10vw, 100px);
+      border-radius: 50%;
+      border: 3px solid white;
     }
 
     .face {
       position: absolute;
-      width: 10vw;
-      height: 10vw;
+      width: 80px;
+      height: 80px;
       border-radius: 50%;
       object-fit: cover;
       cursor: pointer;
@@ -88,242 +77,165 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0,0,0,0.85);
       color: white;
-      font-family: sans-serif;
-      font-size: 4vw;
+      font-size: 36px;
       text-align: center;
-      z-index: 2000;
       padding-top: 20vh;
+      z-index: 2000;
     }
 
     #gameover-screen button {
-      font-size: 3vw;
+      font-size: 24px;
       margin-top: 20px;
       padding: 10px 20px;
-      cursor: pointer;
-    }
-
-    #highscore {
-      font-size: 2vw;
-    }
-
-  @media (max-width: 600px), (max-height: 450px) {
-  #score, #target, #timer {
-    font-size: 4vw;
-  }
-
-  #music-toggle {
-    font-size: 4vw;
-  }
-
-  .face {
-    width: 14vw;
-    height: 14vw;
-  }
-
-  #highscore {
-    font-size: 3vw;
-  }
-
-  #gameover-screen {
-    font-size: 4.5vw;
-  }
-
-  #gameover-screen button {
-    font-size: 3.5vw;
-  }
-}
     }
   </style>
 </head>
 <body>
 
-  <div id="timer">Zeit: 60</div>
-  <div id="target">WO IST: ???</div>
-  <div id="score">
-    <span id="score-value">Punkte: 0</span>
-    <div id="highscore">Highscore: 0</div>
-  </div>
-  <button id="music-toggle">🔊</button>
+  <div id="timer">Zeit: 300</div>
+  <div id="target"><img id="target-img" src="" alt="Zielperson"></div>
+  <div id="score">Punkte: 0</div>
 
   <div id="gameover-screen">
-    <div id="gameover-text">Game Over</div>
+    <div id="gameover-text">Zeit vorbei!</div>
     <div id="gameover-score"></div>
-    <button onclick="restartGame()">Neustart</button>
+    <button onclick="restartGame()">Nochmal spielen</button>
   </div>
 
-  <audio id="background-music" src="tetris.mp3" autoplay loop></audio>
+<script>
+const persons = [
+  { name: "Tante Franni", img: "Frannipic.jpeg", sounds: ["franni1.mp3", "franni2.mp3", "franni3.mp3"] },
+  { name: "Onkel Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3"] },
+  { name: "Mama", img: "Franzipic.jpg", sounds: ["Franzi1.ogg"] },
+  { name: "Lutz", img: "Lutzpic.jpg", sounds: ["lutz1.mp3"] },
+  { name: "John", img: "Johnypic.jpg", sounds: ["John1.mp3"] },
+  { name: "Evi", img: "Evipic.jpg", sounds: ["Evi1.mp3"] },
+  { name: "Opa", img: "Vaterpic.jpg", sounds: ["Vater1.mp3"] },
+  { name: "Oma", img: "Mutterpic.jpg", sounds: ["Mutter1.mp3"] }
+];
 
-  <script>
-    const music = document.getElementById("background-music");
-    music.volume = 0.1;
+let score = 0;
+let currentTarget = null;
+let gameOver = false;
+let spawnInterval = null;
+let timerInterval = null;
+let timeLeft = 300;
 
-    document.getElementById("music-toggle").addEventListener("click", () => {
-      if (music.paused) {
-        music.play();
-        musicToggle.innerText = "🔊";
-      } else {
-        music.pause();
-        musicToggle.innerText = "🔇";
-      }
-    });
+function updateScore() {
+  document.getElementById("score").innerText = "Punkte: " + score;
+}
 
-    let score = 0;
-    let currentTarget = null;
-    let gameOver = false;
-    let spawnInterval = null;
-    let timerInterval = null;
-    let timeLeft = 60;
-    let highscore = parseInt(localStorage.getItem("highscore")) || 0;
+function updateTimer() {
+  document.getElementById("timer").innerText = "Zeit: " + timeLeft;
+}
 
-    const persons = [
-      { name: "Tante Franni", img: "Frannipic.jpeg", sounds: ["Franni1.mp3", "Franni2.mp3", "Franni3.mp3"] },
-      { name: "Onkel Philipp", img: "Philipppic.jpg", sounds: ["Philipp1.mp3", "Philipp2.mp3", "Philipp3.mp3", "Philipp4.mp3", "Philipp5.mp3"] },
-      { name: "Mama", img: "Franzipic.jpg", sounds: ["Franzi1.ogg"] },
-      { name: "Lutz", img: "Lutzpic.jpg", sounds: ["lutz1.mp3", "lutz2.mp3"] },
-      { name: "John", img: "Johnypic.jpg", sounds: ["John1.mp3"] },
-      { name: "Evi", img: "Evipic.jpg", sounds: ["Evi1.mp3"] },
-      { name: "Opa", img: "Vaterpic.jpg", sounds: ["Vater1.mp3", "Vater2.mp3", "Vater3.mp3", "Vater4.mp3", "Vater5.mp3", "Vater6.mp3", "Vater7.mp3", "Vater8.mp3"] },
-      { name: "Oma", img: "Mutterpic.jpg", sounds: ["Mutter1.mp3", "Mutter2.mp3", "Mutter3.mp3", "Mutter4.mp3", "Mutter5.mp3", "Mutter6.mp3", "Mutter7.mp3", "Mutter8.mp3"] }
-    ];
+function setNewTarget() {
+  currentTarget = persons[Math.floor(Math.random() * persons.length)];
+  document.getElementById("target-img").src = currentTarget.img;
+  document.getElementById("target-img").alt = currentTarget.name;
+}
 
-    function updateScore() {
-      document.getElementById("score-value").innerText = "Punkte: " + score;
+function getSpawnSpeed() {
+  return Math.max(150, 1200 - score * 50);
+}
+
+function getMoveSpeed() {
+  return Math.min(12, 1.5 + score * 0.2);
+}
+
+function getSpawnCount() {
+  return Math.floor(Math.random() * 5) + 3;
+}
+
+function spawnWave() {
+  if (gameOver) return;
+  for (let i = 0; i < getSpawnCount(); i++) {
+    spawnPerson();
+  }
+}
+
+function spawnPerson() {
+  if (gameOver) return;
+
+  const person = persons[Math.floor(Math.random() * persons.length)];
+  const img = document.createElement("img");
+  img.src = person.img;
+  img.className = "face";
+  img.style.left = Math.random() * (window.innerWidth - 100) + "px";
+  img.style.top = window.innerHeight + "px";
+  document.body.appendChild(img);
+
+  const speed = getMoveSpeed();
+  const move = setInterval(() => {
+    const top = parseFloat(img.style.top);
+    if (top < -120) {
+      img.remove();
+      clearInterval(move);
+    } else {
+      img.style.top = (top - speed) + "px";
     }
+  }, 20);
 
-    function updateHighscoreDisplay() {
-      document.getElementById("highscore").innerText = "Highscore: " + highscore;
+  img.addEventListener("click", () => {
+    if (gameOver) return;
+    img.remove();
+    clearInterval(move);
+
+    if (person.name === currentTarget.name) {
+      const sound = person.sounds[Math.floor(Math.random() * person.sounds.length)];
+      new Audio(sound).play();
+      score++;
+      updateScore();
+      setNewTarget();
     }
+  });
+}
 
-    function updateTimer() {
-      document.getElementById("timer").innerText = "Zeit: " + timeLeft;
-    }
-
-    function setNewTarget() {
-      currentTarget = persons[Math.floor(Math.random() * persons.length)];
-      document.getElementById("target").innerText = "WO IST DENN: " + currentTarget.name;
-    }
-
-    function getSpawnSpeed() {
-      return Math.max(150, 1200 - score * 50);
-    }
-
-    function getMoveSpeed() {
-      return Math.min(12, 1.5 + score * 0.2);
-    }
-
-    function getSpawnCount() {
-      return Math.floor(Math.random() * 5) + 3;
-    }
-
-    function spawnWave() {
-      if (gameOver) return;
-      for (let i = 0; i < getSpawnCount(); i++) {
-        spawnPerson();
-      }
-    }
-
-    function spawnPerson() {
-      if (gameOver) return;
-
-      const person = persons[Math.floor(Math.random() * persons.length)];
-      const img = document.createElement("img");
-      img.src = person.img;
-      img.className = "face";
-      img.style.left = Math.random() * (window.innerWidth - 100) + "px";
-      img.style.top = window.innerHeight + "px";
-      document.body.appendChild(img);
-
-      const speed = getMoveSpeed();
-      const move = setInterval(() => {
-        const top = parseFloat(img.style.top);
-        if (top < -120) {
-          img.remove();
-          clearInterval(move);
-        } else {
-          img.style.top = (top - speed) + "px";
-        }
-      }, 20);
-
-      img.addEventListener("click", () => {
-        if (gameOver) return;
-        img.remove();
-        clearInterval(move);
-
-        if (person.name === currentTarget.name) {
-          const sound = person.sounds[Math.floor(Math.random() * person.sounds.length)];
-          const audio = new Audio(sound);
-          audio.volume = 0.7;
-          audio.play();
-
-          score++;
-          updateScore();
-          updateHighscoreDisplay();
-          setNewTarget();
-
-          clearInterval(spawnInterval);
-          spawnInterval = setInterval(spawnWave, getSpawnSpeed());
-        } else {
-          endGame();
-        }
-      });
-    }
-
-    function startTimer() {
-      updateTimer();
-      timerInterval = setInterval(() => {
-        timeLeft--;
-        updateTimer();
-        if (timeLeft <= 0) {
-          clearInterval(timerInterval);
-          endGame();
-        }
-      }, 1000);
-    }
-
-    function endGame() {
-      gameOver = true;
-      clearInterval(spawnInterval);
+function startTimer() {
+  updateTimer();
+  timerInterval = setInterval(() => {
+    timeLeft--;
+    updateTimer();
+    if (timeLeft <= 0) {
       clearInterval(timerInterval);
-      if (score > highscore) {
-        highscore = score;
-        localStorage.setItem("highscore", highscore);
-      }
-      document.getElementById("gameover-score").innerHTML = `Punkte: ${score} <br> Highscore: ${highscore}`;
-      document.getElementById("gameover-screen").style.display = "block";
+      endGame();
     }
+  }, 1000);
+}
 
-    function restartGame() {
-      document.querySelectorAll(".face").forEach(el => el.remove());
-      score = 0;
-      timeLeft = 60;
-      gameOver = false;
-      updateScore();
-      updateHighscoreDisplay();
-      updateTimer();
-      setNewTarget();
-      document.getElementById("gameover-screen").style.display = "none";
-      spawnInterval = setInterval(spawnWave, getSpawnSpeed());
-      startTimer();
-    }
+function endGame() {
+  gameOver = true;
+  clearInterval(spawnInterval);
+  clearInterval(timerInterval);
+  document.getElementById("gameover-score").innerHTML = `Punkte: ${score}`;
+  document.getElementById("gameover-screen").style.display = "block";
+}
 
-    function startGame() {
-      setNewTarget();
-      updateScore();
-      updateHighscoreDisplay();
-      updateTimer();
-      spawnInterval = setInterval(spawnWave, getSpawnSpeed());
-      startTimer();
-    }
+function restartGame() {
+  document.querySelectorAll(".face").forEach(el => el.remove());
+  score = 0;
+  timeLeft = 300;
+  gameOver = false;
+  updateScore();
+  updateTimer();
+  setNewTarget();
+  document.getElementById("gameover-screen").style.display = "none";
+  spawnInterval = setInterval(spawnWave, getSpawnSpeed());
+  startTimer();
+}
 
-    startGame();
+function startGame() {
+  setNewTarget();
+  updateScore();
+  updateTimer();
+  spawnInterval = setInterval(spawnWave, getSpawnSpeed());
+  startTimer();
+}
 
-    document.body.addEventListener("click", function startMusicOnce() {
-      music.play().catch(err => console.log("Autoplay blockiert:", err));
-      document.body.removeEventListener("click", startMusicOnce);
-    });
-  </script>
+startGame();
+</script>
 
 </body>
 </html>
